@@ -1,3 +1,11 @@
+2001-04-09  Bruno Haible  <haible@clisp.cons.org>
+
+	* po.c: Include mbswidth.h.
+	(program_name): New declaration.
+	(multiline_warning): New function.
+	(po_callback_message): Change messages again. Call multiline_warning
+	instead of error.
+
 2001-04-04  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.c (program_name): Change type to 'const char *'.
